data/derived/comb/progs/unify/prog6259.ml.out
Characters 502-503:
  | Golden e'              -> cos(eval (e',x,y)**2.0 -. eval (e',x,y) -. 1)
                                                                         ^
Error: This expression has type int but an expression was expected of type
         float
